[workspace]
members = ["crates/*"]

[package]
name = "minedmap"
version = "0.1.0"
edition = "2021"
license = "MIT"
default-run = "minedmap"

[dependencies]
anyhow = "1.0.68"
bincode = "1.3.3"
clap = { version = "4.1.4", features = ["derive"] }
fastnbt = "2.3.2"
futures-util = "0.3.28"
glam = "0.24.0"
image = { version = "0.24.5", default-features = false, features = ["png"] }
indexmap = { version = "2.0.0", features = ["serde"] }
lru = "0.11.0"
minedmap-nbt = { version = "0.1.0", path = "crates/nbt", default-features = false }
minedmap-resource = { version = "0.1.0", path = "crates/resource" }
minedmap-types = { version = "0.1.0", path = "crates/types" }
num-integer = "0.1.45"
num_cpus = "1.16.0"
rayon = "1.7.0"
rustc-hash = "1.1.0"
serde = { version = "1.0.152", features = ["rc"] }
serde_json = "1.0.99"
tokio = { version = "1.31.0", features = ["rt", "parking_lot", "sync"] }
zstd = "0.12.3"

[features]
default = ["zlib-ng"]
zlib-ng = ["minedmap-nbt/zlib-ng"]
