[workspace]
members = ["crates/*"]

[workspace.package]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/neocturne/MinedMap"

[workspace.metadata.release]
consolidate-commits = false
pre-release-commit-message = "{{crate_name}} {{version}}"

[package]
name = "minedmap"
version = "2.3.0"
description = "Generate browsable maps from Minecraft save data"
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
exclude = [
  "/.github/",
  "/docs/",
  "/viewer/",
  "/resource/",
]

[package.metadata.release]
tag-message = "{{crate_name}} {{version}}"
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}"},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}"},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n\n## [Unreleased] - ReleaseDate", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/neocturne/MinedMap/compare/{{tag_name}}...HEAD", exactly=1},
]

[dependencies]
anyhow = "1.0.68"
bincode = "1.3.3"
clap = { version = "4.1.4", features = ["derive", "wrap_help"] }
enum-map = "2.7.3"
fastnbt = "2.3.2"
futures-util = "0.3.28"
git-version = "0.3.5"
image = { version = "0.25.1", default-features = false, features = ["png"] }
indexmap = { version = "2.0.0", features = ["serde"] }
lru = "0.12.0"
minedmap-nbt = { version = "0.1.1", path = "crates/nbt", default-features = false }
minedmap-resource = { version = "0.5.0", path = "crates/resource" }
minedmap-types = { version = "0.1.2", path = "crates/types" }
num-integer = "0.1.45"
num_cpus = "1.16.0"
rayon = "1.7.0"
regex = "1.10.2"
rustc-hash = "2.0.0"
serde = { version = "1.0.152", features = ["rc", "derive"] }
serde_json = "1.0.99"
tokio = { version = "1.31.0", features = ["rt", "parking_lot", "sync"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
zstd = "0.13.0"

[features]
default = ["zlib-ng"]
zlib-ng = ["minedmap-nbt/zlib-ng"]
