[package]
name = "minedmap-nbt"
version = "0.1.0"
description = "MinedMap's handling of Minecraft NBT data and region files"
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.75"
bytemuck = "1.13.1"
fastnbt = "2.4.4"
flate2 = "1.0.27"
minedmap-types = { version = "0.1.2", path = "../types" }
serde = "1.0.183"

[features]
zlib-ng = ["flate2/zlib-ng"]

[dev-dependencies]
clap = { version = "4.3.23", features = ["derive"] }
