[package]
name = "minedmap-nbt"
version = "0.2.0"
description = "MinedMap's handling of Minecraft NBT data and region files"
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.75"
bytemuck = "1.13.1"
fastnbt = "2.4.4"
flate2 = "1.1.0"
minedmap-types = { version = "0.2.0", path = "../types" }
serde = "1.0.183"

[dev-dependencies]
clap = { version = "4.3.23", features = ["derive"] }
flate2 = { version = "1.1.0", features = ["zlib-rs"] }
