[package]
name = "minedmap-resource"
version = "0.3.0"
description = "Data describing Minecraft biomes and block types"
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
enumflags2 = { version = "0.7.7", features = ["serde"] }
glam = "0.25.0"
serde = { version = "1.0.183", features = ["derive"] }
