[package]
name = "minedmap-resource"
version = "0.6.0"
description = "Data describing Minecraft biomes and block types"
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
bincode = "2.0.1"
enumflags2 = { version = "0.7.7", features = ["serde"] }
glam = "0.30.0"
