[package]
name = "minedmap-types"
version = "0.1.0"
description = "Common types used by several MinedMap crates"
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
itertools = "0.11.0"
serde = { version = "1.0.183", features = ["derive"] }
